[CodeMirror] Don't let scrollbar prevent selection

--- a/style/codemirror/codemirror.css
+++ b/style/codemirror/codemirror.css
@@ -8,7 +8,7 @@
 /* PADDING */
 
 .CodeMirror-lines {
-  padding: 4px 0; /* Vertical padding around content */
+  padding: 4px 0 18px; /* Vertical padding around content */
 }
 .CodeMirror pre {
   padding: 0 4px; /* Horizontal padding of content */
